<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/study2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/category" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/teaching"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/teaching"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imaView"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/coding" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/coding"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageVew2"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/research" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/research"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iageView"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sports" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/sports"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imeView2"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fitness" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/fitness"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/geView"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cooking" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/public_speaking"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>